_bug java9 java.xml dependency removed